styles/main.scss
$nav-color-active: #63D46D;
$nav-color-inactive: #666;
$nav-color-active: #63D46D;
$sidebar-width: 175px;
$duration: 0.2s;

* { box-sizing: border-box; }

html, body {
  font-family: 'Roboto', sans-serif;
}

.title {
  font-size: 28px;
  font-weight: 500;
}

.quote {
  font-size: 16px;
  margin: 20px 0;
  border-left: 5px solid $nav-color-active;
  line-height: 20px;
  padding-left: 20px;
  text-align: justify;
  padding: 20px;
}

.citation {
  display: block;
  margin-top: 0;
  margin-bottom: 20px;
}

.ref {
  position: relative;
  width: auto;
  font-size: 16px;
  margin: 0 auto;
  color: $nav-color-inactive;
  text-decoration: none;
  -webkit-transition-duration: $duration;
          transition-duration: $duration;
  &:before {
    content: "";
    position: absolute;
    bottom: -2px;
    left: 50%;
    right: 50%;
    background: $nav-color-active;
    height: 2px;
    -webkit-transition-duration: $duration;
            transition-duration: $duration;
  }

  &:hover {
    color: $nav-color-active;
    -webkit-transition-duration: $duration;
            transition-duration: $duration;
    &:before {
      left: 0;
      right: 0;
    }
  }
}

.explanation {
  line-height: 20px;
  margin: 20px 0;
}

.pen {
  height: 400px;
  width: 100%;
  margin-bottom: 20px;
}

@-webkit-keyframes enter {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes enter {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.entering {
  -webkit-animation: enter 0.5s;
  animation: enter 0.5s;
}

@-webkit-keyframes leave {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes leave {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.leaving {
  -webkit-animation: leave 0.5s;
  animation: leave 0.5s;
}

